--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "browser-image-compression": "^1.0.12",
     "core-js": "^3.6.5",
     "firebase": "^7.19.1",
     "vue": "^2.6.11",
