--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "firebase": "^7.19.1",
     "vue": "^2.6.11",
+    "vue-loading-template": "^1.3.2",
     "vue-router": "^3.2.0",
     "vuefire": "^2.2.0-alpha.0",
     "vuetify": "^2.2.11",
